option(
	'enable_tests',
	type: 'boolean',
	value: true,
	description: 'Enable and build the libnokogiri test suite'
)

option(
	'build_docs',
	type: 'boolean',
	value: false,
	description: 'Build the documentation for libnokogiri'
)

option(
	'build_examples',
	type: 'boolean',
	value: true,
	description: 'Builds the example applications'
)

option(
	'bugreport_url',
	type: 'string',
	value: 'https://github.com/lethalbit/libnokogiri/issues',
	description: 'URL for bug report submissions'
)

option(
	'enable_fuzzing',
	type: 'boolean',
	value: false,
	description: 'This will assume that CC and CXX are using AFL and will build the fuzzing targets'
)
